--- a/package.json
+++ b/package.json
@@ -27,23 +27,32 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toolbar": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-three/fiber": "^8.16.6",
+    "@studio-freight/lenis": "^1.0.42",
     "@tabler/icons-react": "^3.2.0",
+    "@tiptap/extension-character-count": "^2.3.1",
+    "@tiptap/extension-highlight": "^2.3.1",
     "@tiptap/pm": "^2.3.1",
     "@tiptap/react": "^2.3.1",
     "@tiptap/starter-kit": "^2.3.1",
+    "@types/axios": "^0.14.0",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.0.0",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.0.4",
     "encoding": "^0.1.13",
     "firebase": "^9.23.0",
-    "framer-motion": "^11.0.28",
+    "framer-motion": "^11.2.0",
+    "framer-motion-3d": "^11.2.0",
     "gridstack": "^10.1.2",
     "jquery": "^3.7.1",
     "lucide-react": "^0.284.0",
     "mathjs": "^12.4.2",
     "next": "^14.2.3",
+    "novel": "^0.3.1",
     "polyfill": "^0.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -51,12 +60,14 @@
     "react-lite-youtube-embed": "^2.4.0",
     "react-tweet": "^3.2.1",
     "reactfire": "^4.2.3",
+    "sass": "^1.77.1",
     "slate": "^0.103.0",
     "slate-history": "^0.100.0",
     "slate-hyperscript": "^0.100.0",
     "slate-react": "^0.102.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.164.1",
     "vaul": "^0.9.0",
     "zod": "^3.22.4"
   },
